[package]
name = "pmkam"
description = "GPU Krist vanity address miner based on OpenCL"
version = "0.5.0"
authors = ["Miguel Oliveira <miguel.oliveira4224@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
ocl = "0.19.3"
ocl-extras = "0.1.1"
getrandom = "0.1.14"
sha2 = "0.9.1"
clap = "2.33.3"
anyhow = "1.0.40"
