[package]
name = "pmkam"
description = "GPU Krist vanity address miner based on OpenCL"
version = "0.6.0"
authors = ["Miguel Oliveira <miguel.oliveira4224@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
ocl = "0.19.4"
ocl-extras = "0.1.1"
rand = "0.8.5"
sha2 = "0.9.9"
clap = "2.34.0"
anyhow = "1.0.68"
